--- a/fourthproject/src/index.css
+++ b/fourthproject/src/index.css
@@ -1,72 +1,310 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
+  padding: 0;
   margin: 0;
+  background-image: url("https://static.wixstatic.com/media/11062b_a6e1bb8d93704b859a65ba5d3dd3645a~mv2.jpg/v1/fill/w_1349,h_960,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/11062b_a6e1bb8d93704b859a65ba5d3dd3645a~mv2.jpg");
+  background-size: cover;
+  background-position: center;
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden; /* Hide horizontal scrollbar */
+}
+
+.nav-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: space-between;
+  align-items: center;
+  opacity: 0.6;
+  /* border: 2px rgb(255, 255, 255) solid; */
+  height: 10vh;
+  background-color: rgb(161, 155, 155);
+  z-index: 1000; /* Ensure the navbar is above other content */
+  transition: top 0.5s; /* Smooth transition when scrolling */
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.list-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.list-container li {
+  margin-right: 45px;
+  font-size: 30px;
+  color: rgb(0, 0, 0);
+}
+
+.list-container li:hover {
+  color: rgb(237, 240, 89);
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.nav-button {
+  font-size: 18px;
+  border-radius: 37px;
+  background-color: rgb(158, 63, 253,1);
+  color: white;
+  padding: 10px 20px;
+  margin-right: 20px;
+  border: none;
+}
+.nav-button:hover{
+  background-color: rgb(22,22,63,1);
+  cursor: pointer;
+}
+
+.logo img {
+  width: 80px; /* Adjust the width as needed */
+  height: auto; /* Maintain aspect ratio */
+  position: absolute; /* Position the logo absolutely */
+  top: 5px; /* Adjust top position as needed */
+  left: 15px; /* Adjust left position as needed */
+  z-index: 1001; /* Ensure the logo is above other content */
+}
+
+.headline {
+  color:#16163F;
+  margin: 100px auto; /* Adjust margin to center vertically */
+  padding: 76px;
+  text-align: left;
+  font-size: 97px;
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
+  animation: slideDown 2.5s ease-in-out; /* Apply slide-down animation */
+}
+
+@keyframes slideDown {
+  0% {
+      transform: translateY(-100%);
+      opacity: 0;
   }
-  a:hover {
-    color: #747bff;
+  100% {
+      transform: translateY(0);
+      opacity: 1;
   }
-  button {
-    background-color: #f9f9f9;
-  }
+}
+
+.subheadline {
+  color: #16163F;
+  font-size: 40px;
+  font-weight: 100;
+  margin: 20px;
+}
+
+.homebutton {
+  font-size: 30px;
+  font-weight: 100;
+  border-radius: 36px;
+  padding: 17px;
+  margin: 37px;
+  color:white;
+  background-color: rgb(158, 63, 253,1);
+  border: none;
+  cursor: pointer;
+}
+.homebutton:hover{
+  background-color: rgb(22,22,63,1);
+}
+
+.content {
+  height: 2000px; /* Just for demonstration */
+  /* Add your content styles here */
+}
+.container{
+position: relative;
+width: 100%;
+height: 80%;
+display: flex;
+justify-content: center;
+align-items: center;
+padding: 20px 100px;
+box-shadow:inset;
+text-shadow: #16163F;
+/* border: 2px red solid; */
+background: white;
+
+}
+
+.text-container {
+width: 30%; /* Adjust width as needed */
+padding: 0 10px; /* Adjust padding as needed */
+}
+
+.text-container h2 {
+margin-bottom: 10px;
+color: blueviolet;
+font-size: 40px;
+}
+
+.text-container p {
+margin-bottom: 20px;
+
+}
+
+.contact-box{
+max-width: 50%; /* Adjust width as needed */
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+justify-content: center;
+align-items: center;
+text-align: center;
+background-color: #d4d4d4;
+-webkit-box-shadow: 21px 16px 11px 5px rgba(15,191,141,1);
+-moz-box-shadow: 21px 16px 11px 5px rgba(15,191,141,1);
+box-shadow: 21px 16px 11px 5px rgba(15,191,141,1);
+border-radius: 25px;
+}
+
+.left{
+background: url("https://images.unsplash.com/photo-1710244182004-1c708b3f146d?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D") no-repeat center;
+background-size: cover;
+height: 100%;
+
+}
+
+.right{
+padding: 25px 40px;
+}
+
+h2{
+position: relative;
+padding: 0 0 10px;
+margin-bottom: 10px;
+}
+
+h2:after{
+content: '';
+position: absolute;
+left: 50%;
+bottom: 0;
+transform: translateX(-50%);
+height: 4px;
+width: 50px;
+border-radius: 2px;
+background-color: #2ecc71;
+}
+
+.field{
+width: 100%;
+border: 2px solid rgba(0, 0, 0, 0);
+outline: none;
+background-color: rgb(255, 255, 255);
+padding: 0.5rem 1rem;
+font-size: 1.1rem;
+margin-bottom: 22px;
+transition: .3s;
+
+}
+
+.field:hover{
+background-color: rgba(167, 185, 190, 0.658);
+}
+
+textarea{
+min-height: 150px;
+}
+
+.btn{
+width: 100%;
+padding: 0.5rem 1rem;
+background-color:rgb(158, 63, 253,1);
+color: #fff;
+font-size: 1.1rem;
+border: none;
+outline: none;
+cursor: pointer;
+transition: .3s;
+}
+
+.btn:hover{
+background-color: rgb(22,22,63,1);
+}
+
+.field:focus{
+/* border: 2px solid rgba(30,85,250,0.47); */
+background-color: #fff;
+}
+.About{
+width: 100vw;
+height: 45%;
+ border: 2px black solid; 
+background-color: #16163F;
+}
+.line{
+color: white;
+font-size: 40px;
+text-align: center;
+background-color: #16163F;
+}
+.para{
+color: white;
+font-size: 25px;
+text-align: center;
+background-color: #16163F;
+}
+.clients{
+display: grid;
+grid-template-columns: repeat(4, 1fr); /* Four columns */
+gap: 30px; /* Adjust gap between grid items */
+padding: 20px; /* Add padding */
+ /* border: 2px rgb(206, 0, 0) solid;  */
+width: 100vw;
+height: 45%;
+background-color: rgb(255, 255, 255);
+}
+
+.client-pic {
+width: 60%;
+height: 60%;
+object-fit: cover; /* Ensure the image fills the box while maintaining aspect ratio */
+border-radius: 15px;
+}
+.fourthdiv{
+background-color: rgb(255, 255, 255);
+text-align: center;
+font-size: 30px;
+font-weight: 500;
+color: rgb(24, 24, 24);
+ border: 2px rgba(0, 0, 0, 0) solid; 
+
+}
+.fifthdiv{
+display: grid;
+grid-template-columns: 1fr 1fr; /* Two columns */
+gap: 30px; /* Adjust gap between grid items */
+padding: 20px; /* Add padding */
+background-color: #16163F;
+color: white;
+text-align: center;
+font-size: 20px;
+font-weight: 500;
+}
+
+.feedback-form {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+}
+
+.feedback-form .field {
+width: 80%;
+margin-bottom: 20px;
+}
+
+.feedback-form .btn {
+width: 50%;
+}
+
+.footer {
+text-align: center;
+color: white;
+padding: 20px;
+background-color: #16163F;
 }
